--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -1,6 +1,8 @@
 .container {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
+  flex-wrap: wrap;
 }
 
 .list {
