--- a/components/profile/contact.module.css
+++ b/components/profile/contact.module.css
@@ -1,15 +1,9 @@
 .container {
   display: flex;
   list-style: none;
-  padding: 0;
+  padding: 0 0 0 1em;
   margin: 0;
   justify-content: space-between;
-}
-
-@media screen and (max-width: 1200px) {
-  .container {
-    width: auto;
-  }
 }
 
 .icon {
