--- a/styles/global.css
+++ b/styles/global.css
@@ -26,6 +26,7 @@ body {
   margin: 0;
   font-size: 100%;
   line-height: 1.5em;
+  min-width: 320px;
 }
 
 h2,
